<resources>
    <string name="app_name">My Recipes</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="_081777777777">081777777777</string>
    <string name="erlangga_street">Erlangga street</string>
    <string name="my_recipe">My Recipe</string>
    <string name="button_to_detail">button to detail</string>
    <string name="food_photo">food photo</string>
    <string name="bobor_ayam">Bobor Ayam</string>
    <string name="_25_min">25 Min</string>
    <string name="_3_kalori">3 Kalori</string>
    <string name="tentang_masakan">Tentang masakan</string>
    <string name="delicius_and_yummy_easy_to_make_with_simple_ingredient_with_acient_tecniqu_we_can_create_crispy_chicken_and_dont_worry_about_bon_apetit">Delicius and yummy easy to make with simple ingredient with acient tecniqu we can create crispy chicken and dont worry about, bon apetit.</string>
    <string name="bahan">Bahan</string>
    <string name="cara_masak">Cara Masak</string>
    <string name="photo_profile">photo profile</string>
    <string name="galih_doe">Galih Doe</string>
    <string name="icon_email">icon email</string>
    <string name="icon_phone">icon phone</string>
    <string name="icon_address">icon_address</string>
    <string name="nasi_kebuli">Nasi Kebuli</string>
    <string name="delicius_and_yummy_easy_to_cook">Delicius and yummy , easy to cook</string>
    <string name="_23_min">23 Min</string>
    <string name="see_recipe">See Recipe</string>
    <string name="_6_ingredients">6 Ingredients</string>
    <string name="_5_0">5.0</string>
</resources>