<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.DetailActivity">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_boborayam"
            android:contentDescription="@string/food_photo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_card_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_photo"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-60dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="@color/green_main"
            app:cardCornerRadius="12dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/food_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/bobor_ayam"
                        android:textColor="@color/white"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/rating_numb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_toStartOf="@+id/iv_rating"
                        android:text="@string/_5_0"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_star_rating_white" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/sum_ingredient"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_book_recipe"
                        android:drawablePadding="6dp"
                        android:text="4 Bahan"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/sum_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_time"
                        android:drawablePadding="6dp"
                        android:text="@string/_25_min"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/sum_calory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_calory"
                        android:drawablePadding="6dp"
                        android:text="@string/_3_kalori"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/about_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_card_green"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:text="@string/tentang_masakan"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_recipe"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            android:text="@string/delicius_and_yummy_easy_to_make_with_simple_ingredient_with_acient_tecniqu_we_can_create_crispy_chicken_and_dont_worry_about_bon_apetit" />

        <TextView
            android:id="@+id/bahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_recipe_description"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:text="@string/bahan"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bahan"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/how_to_cook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_bahan"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:text="@string/cara_masak"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_how_to_cook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/how_to_cook"
            android:layout_marginTop="24dp" />

    </RelativeLayout>
</ScrollView>
